<resources>
    <string name="app_name">Onde Aluga</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_logoff">Logoff</string>
    <string name="slide1">Encontre o seu lar</string>
    <string name="slide2">Chá de Cogumelo é bom</string>
    <string name="slide3">Vikings nessa porra</string>
    <string name="fblogin">Sign in with Facabook</string>
    <string name="glogin">Sign in with G+</string>
    <string name="login">Login</string>
    <string name="hint_user">Usuário</string>
    <string name="hint_pass">Senha</string>
    <string name="Register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="location">location</string>

    <string name="instrucoes">Preencha as informações se cadastrar</string>
    <string name="hint_first">Nome</string>
    <string name="hint_last">Sobrenome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="data">Data de Aniversário</string>
    <string name="btn_cadastre">Cadastre-se</string>
    <string name="observacao">Nunca publicaremos no facebook sem sua permissão</string>

    <string name="title_section1">Mapa</string>
    <string name="title_section2">Filtros</string>
    <string name="title_section3">Detalhes</string>
    <string name="title_section4">Favoritos</string>
    <string name="title_section5">Sobre</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="action_settings">Settings</string>

    <string name="filtro_tipo">Tipo de imóvel</string>
    <string name="imovel1">Casa</string>
    <string name="imovel2">Apartamento</string>
    <string name="imovel3">Condomínio</string>
    <string name="imovel4">Casa de Vila</string>
    <string name="imovel5">Sala Comercial</string>
    <string name="filtro_valor">Faixa de preço</string>
    <string name="faixa_preco1">Até 1000</string>
    <string name="faixa_preco2">De 1000 à 1500</string>
    <string name="faixa_preco3">De 1500 à 2000</string>
    <string name="faixa_preco4">De 2000 à 2500</string>
    <string name="faixa_preco5">Acima de 2500</string>
    <string name="favoritos">Você não possui nenhum item adicionado aos favoritos.</string>


</resources>

