<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="#222"
    tools:context="com.example.kenkelvin.ondealuga.MainActivity$FragmentFiltros">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtro_tipo"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textSize="20dp"
        android:id="@+id/textView2" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="#fff"
            android:text="@string/imovel1"
            android:id="@+id/radioButton" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/imovel2"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/imovel3"
            android:id="@+id/radioButton3" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/imovel4"
            android:id="@+id/radioButton4" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/imovel5"
            android:id="@+id/radioButton5" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtro_valor"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textSize="20dp"
        android:id="@+id/textView3" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/faixa_preco1"
            android:id="@+id/faixa_preco1" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/faixa_preco2"
            android:id="@+id/faixa_preco2" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/faixa_preco3"
            android:id="@+id/faixa_preco3" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/faixa_preco4"
            android:id="@+id/faixa_preco4" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="4dp"
            android:text="@string/faixa_preco5"
            android:id="@+id/faixa_preco5" />

    </RadioGroup>

</LinearLayout>
