<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:windowActionBar="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/city_frame_01"
    android:weightSum="1">

    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="0sp"
        android:src="@drawable/logoondealuga"
        android:layout_width="253dp"
        android:layout_height="120dp"
        android:id="@+id/imageView" />

    <TextView
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:text="@string/instrucoes"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:layout_marginTop="10sp"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_first"
            android:textColor="#FFFFFF"
            android:background="#A0FFFFFF"
            android:ems="10"
            android:id="@+id/firstName"
            android:layout_weight="0.25" />

        <EditText
            android:layout_marginTop="10sp"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="#FFFFFF"
            android:background="#A0FFFFFF"
            android:inputType="textPersonName"
            android:hint="@string/hint_last"
            android:ems="10"
            android:id="@+id/lastName"
            android:layout_weight="0.75" />
    </LinearLayout>

    <EditText
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#A0FFFFFF"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:id="@+id/email"
        android:hint="@string/email" />

    <EditText
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#A0FFFFFF"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:id="@+id/paswd"
        android:hint="@string/senha"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:inputType="date"
        android:background="#A0FFFFFF"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:id="@+id/dataNascimento"
        android:hint="@string/data"/>

    <Button
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastre"
        android:id="@+id/button"
        android:onClick="cadastrar"
        android:textSize="24sp"
        android:background="#000"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.14"
        android:textColor="#ffffff"/>

</LinearLayout>
